Remove APOR S3Mock dependant test and revert java 17 and cassandra 5 changes